# GameEngine3D

./: CMakeLists.txt  README.md
config/: CMakeLists.txt
dev/: temp.txt
include/core/: Camera.hpp  Lighting.hpp  Mesh.hpp  Meshes.hpp  Triangle.hpp  World.hpp  mat4.hpp  vec2.hpp  vec4.hpp
include/module/: Mesh.hpp  Meshes.hpp  Triangle.hpp  mat4.hpp  utils.hpp  vec4.hpp
include/utils/: utils.hpp
scripts/: build.sh
src/: main.cpp
src/core/: Lighting.cpp  World.cpp  mat4.cpp  mesh.cpp  meshes.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/utils/: utils.cpp
tests/performance/: performance.cpp
